<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="?attr/customBackgroundColor"
    android:padding="24dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnThemes"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Theme Settings"
            android:onClick="showThemeMenu"
            android:src="@android:drawable/ic_menu_preferences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/customSecondaryTextColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Title -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="?attr/customSecondaryTextColor"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_page_title"
        android:textColor="?attr/customSecondaryTextColor"
        android:textSize="24sp" />

    <!-- Username -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColorHint="?attr/customTextColor"
        app:hintTextColor="?attr/customSecondaryTextColor"
        app:boxStrokeColor="?attr/customSecondaryTextColor"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/customTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:cornerRadius="12dp"
        android:text="@string/reset_password_button" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:cornerRadius="12dp"
        android:text="@string/back_to_main" />

</LinearLayout>
